--- a/css/jxfyList.css
+++ b/css/jxfyList.css
@@ -19,7 +19,7 @@
 .zhezhaocdisbaloshx{display: block;}
 .zzcnershx{position:absolute;width:100%;background-color: #ffffff;height: 9.706666rem;padding-left: 0.56rem;}
 .mjqyfm{height: 1.4rem;line-height: 1.4rem;font-size: 0.346666rem;color: #333333;}
-.xuanxing{border-bottom: 1px solid #e5e5e5;height: 3.04rem;}
+.xuanxing{border-bottom: 1px solid #e5e5e5;min-height: 2rem;height: auto;}
 .xiaokzujin{border: 1px solid #ededed;height: 0.6rem;line-height:0.6rem;width: 1.906666rem;text-align: center;border-radius: 5px;font-size: 0.24rem;color: #898989;margin-right: 0.36rem;margin-bottom: 0.36rem;background-color:#ededed;}
 .xiaokzujinyishang{border: 1px solid #ededed;height: 0.6rem;line-height:0.6rem;width: 1.906666rem;text-align: center;border-radius: 5px;font-size: 0.24rem;color: #898989;margin-right: 0.36rem;margin-bottom: 0.36rem;background-color:#ededed;}
 .xiaokchuaq{border: 1px solid #ededed;height: 0.6rem;line-height:0.6rem;width: 1.906666rem;text-align: center;border-radius: 5px;font-size: 0.24rem;color: #898989;margin-right: 0.36rem;margin-bottom: 0.36rem;background-color:#ededed;}
