--- a/css/addZhiFuWu.css
+++ b/css/addZhiFuWu.css
@@ -22,7 +22,7 @@
 }
 .bottomeneir{display: flex;justify-content: space-between;height: 1.426666rem;width:10rem;position: absolute;bottom: 0px;}
 .addzhiyewu{overflow: auto;position: absolute;top: 0rem;left: 0rem;right: 0px;bottom: 1.426666rem;background-color:#ffffff;}
-.addzhiyewuimg{height: 30.92rem;background: url(http://47.92.145.21:81/yskjapp/servicemall/addYeWu/addyewuimg.png) no-repeat;background-size: 100% auto;}
+.addzhiyewuimg{height: 30.92rem;background: url(../img/addyewuimg.png) no-repeat;background-size: 100% auto;}
 .bodadianhua{width: 50%;display: flex;height: 100%;align-items: center;justify-content: center;font-size: 0.4rem;background-color: #333333;}
 .woyaochuce{width: 50%;display: flex;height: 100%;align-items: center;justify-content: center;font-size: 0.4rem;color: #fefefe;background-color: #ffba26;}
 .bodadianhua a{color: #fefefe;}
