--- a/css/qiYeHuLian.css
+++ b/css/qiYeHuLian.css
@@ -32,7 +32,7 @@
 .gnlyyw{margin-left: 0.333333rem;height: 0.84rem;width: 5.92rem;font-size: 0.32rem;color: #666666;}
 .lijicx{height: 1.253333rem;width: 5.92rem;margin-left: 0.333333rem;display: flex;align-items: center;}
 .lijiztti{border: 1px solid #2b70d8;width: 2.093333rem;display: flex;height: 0.666666rem;line-height: 0.666666rem;justify-content: center;border-bottom-left-radius: 15px;border-bottom-right-radius: 15px;border-top-left-radius: 15px;border-top-right-radius: 15px;font-size: 0.32rem;color: #2b70d8;}
-.shijanrq{display:flex;margin-left: 2.186666rem;font-size: 0.293333rem;color: #999999;}
+.shijanrq{display:flex;margin-left: 2.186666rem;font-size: 0.293333rem;color: #999999;width:1.866666rem;}
 .lijicximg{width: 2.773333rem;height: 3.226666rem;position: absolute;top: -0.16rem;right: -0.213333rem;background: url(../img/lijicx.png) no-repeat;background-size: 100% 100%;box-shadow:0px 0px 18px #dedede;}
 .boottms{height: 0.893333rem;background-color: #ffffff;}
 .kognjde{height: 0.386666rem;background-color: #ffffff;}
