--- a/css/fyxq.css
+++ b/css/fyxq.css
@@ -45,9 +45,10 @@
 .xindebg{width: 0.6rem;display: flex;height: 0.56rem;}
 .xindebgimg{background:url(../img/fav2.png) no-repeat;background-size: auto 100%;}
 .choucdewezi{color:#FFFFFF;height: 0.493333rem;margin-left: 0.266666rem;font-size: 0.373333rem;display: flex;align-items: center;}
-.choucdeweziwidth{width: 1.973333rem;}
+.choucdeweziwidth{width: auto;min-width: 0.8rem;}
 .choucdeweziyiwidth{width: 1.2rem;}
 .shouc p{display: flex;}
-.lainxixingmql{font-size: 0.4rem;color: #FFFFFF;text-align:left;width: 100%;text-indent:0.8rem;}
-.xmjxlx{background:#fff url(../img/shoucdianhuobg.png) no-repeat center;background-size:85% 85%;width: 1.146666rem;height: 1.146666rem;-webkit-box-shadow:1px 0px 0.093333rem #333333;box-shadow:1px 0px 0.093333rem #333333;border-radius: 50%;position: absolute;top: -0.133333rem;right: 0.4rem;}
+.xmjx a{display: flex;align-items: center!important;text-align: center;}
+.lainxixingmql{font-size: 0.4rem;color: #FFFFFF;text-align:left;}
+.xmjxlx{background:url(../img/shoucdianhuobg.png) no-repeat;background-size: auto 100%;width:0.533333rem;height:0.533333rem;}
 
