--- a/css/addZhiFuWu.css
+++ b/css/addZhiFuWu.css
@@ -51,9 +51,9 @@
 .shuziyi4{background: url(../img/addfwuxiao4.png) no-repeat;background-size: 100% 100%;}
 .shuziyi5{background: url(../img/addfwuxiao5.png) no-repeat;background-size: 100% 100%;}
 .shuziyi6{background: url(../img/addfwuxiao6.png) no-repeat;background-size: 100% 100%;}
-.bingliaoj{display:flex;margin-left: 0.666666rem;width: 3.4rem;padding-bottom:0.133333rem;background-color: #FFFFFF;border-radius: 0.066666rem;padding-top: 0.173333rem;padding-left: 0.146666rem;font-size: 0.346666rem;color: #1e1e1e;margin-bottom: 0.506666rem; box-shadow:0px 0px 2px #e9e9e9;}
-.xian{border-left: 1px solid #51bbb4;display: flex;height:0.813333rem;}
+.bingliaoj{margin-top: -0.266666rem;display:flex;align-items:center;margin-left: 0.666666rem;width: 3.4rem;height:1.146666rem;padding-bottom:0.133333rem;background-color: #FFFFFF;border-radius: 0.066666rem;padding-top: 0.133333rem;padding-left: 0.146666rem;font-size: 0.346666rem;color: #1e1e1e;margin-bottom: 0.506666rem; box-shadow:0px 0px 2px #e9e9e9;}
+.xian{border-left: 1px solid #51bbb4;display: flex;height:0.83rem;}
 .shanjiao{border-width: 0.106666rem;border-style: solid;border-color: #51bbb4 transparent transparent transparent;width:0.106666rem;height:0.106666rem;display: flex;}
-.xiajiasji{display: flex;flex-direction: column;justify-content: center;width: 0.106666rem;height: 1.32rem;align-items: center;position: absolute;left: 0.23rem;top: 0.4rem;}
+.xiajiasji{display: flex;flex-direction: column;justify-content: center;width: 0.106666rem;height: 1.32rem;align-items: center;position: absolute;left: 0.23rem;top: 0.3rem;}
 .fangfzhix{height:0.513333rem;}
 .fangfzhixspan{top: 0.2rem}
